After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759172 - Boundaries of Seed.argv are not checked
Boundaries of Seed.argv are not checked
Status: RESOLVED FIXED
Product: seed
Classification: Bindings
Component: libseed
git master
Other Linux
: Normal normal
: ---
Assigned To: seed-maint
seed-maint
Depends on:
Blocks:
 
 
Reported: 2015-12-08 12:34 UTC by Peter Rustler
Modified: 2015-12-09 03:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Bugfix (1.43 KB, patch)
2015-12-08 12:59 UTC, Peter Rustler
none Details | Review
Bugfix: Made Seed.argv check for invalid array parameter (1.43 KB, patch)
2015-12-08 15:16 UTC, Peter Rustler
none Details | Review

Description Peter Rustler 2015-12-08 12:34:18 UTC
You get a segfault when you do something like Seed.argv[1000].
It should throw an exception then but crashes.
Comment 1 Peter Rustler 2015-12-08 12:37:41 UTC
I already have a patch for it and will provide it asap.
Comment 2 Peter Rustler 2015-12-08 12:59:54 UTC
Created attachment 316935 [details] [review]
Bugfix
Comment 3 Peter Rustler 2015-12-08 15:16:09 UTC
Created attachment 316948 [details] [review]
Bugfix: Made Seed.argv check for invalid array parameter
Comment 4 Alan Knowles 2015-12-09 03:02:44 UTC
Thanks

Applied.

Regards
Alan