Bugfix: Made Seed.argv check for invalid array parameter

Seed.argv will drop a segfault when you access the array out of
range.

This patch add checking for valid value of array index.

https://bugzilla.gnome.org/show_bug.cgi?id=759172